--- a/organigramme.html
+++ b/organigramme.html
@@ -1,6 +1,35 @@
-<main style="padding:0; margin:0;">
-  <iframe 
-    src="organigramme.pdf#view=FitH" 
-    style="width:100%; height:90vh; border:none;">
-  </iframe>
-</main>
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Organigramme</title>
+
+<style>
+body{
+    margin:0;
+    background:#000;
+}
+
+.pdf-container{
+    width:100%;
+    height:100vh;
+}
+
+.pdf-container iframe{
+    width:100%;
+    height:100%;
+    border:none;
+}
+</style>
+
+</head>
+
+<body>
+
+<div class="pdf-container">
+    <iframe src="organigramme.pdf"></iframe>
+</div>
+
+</body>
+</html>
