--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ body::before{
     <a class="btn" href="https://nantuko888.github.io/Entretien-CS-Consenvoye-/" target="_self"><img src="entretien.png" alt="Entretien"></a>
     <a class="btn" href="documents.html"><img src="documents.png" alt="Documents"></a>
 
-    <a class="btn" href="organisation.html"><img src="organigramme.png" alt="Organigramme"></a>
+    <a class="btn" href="organigramme.html"><img src="organigramme.png" alt="Organigramme"></a>
     <a class="btn" href="informations.html"><img src="informations.png" alt="Informations"></a>
 
     <a class="btn" href="planning.html"><img src="planning.png" alt="Planning"></a>
